There is no HW_AVAILCPU on FreeBSD, NetBSD, and OpenBSD https://bugs.webkit.org/show_bug.cgi?id=132542

Reviewed by Michael Saboff.

Use sysconf() to get the number of processor cores.

* wtf/NumberOfCores.cpp:
(WTF::numberOfProcessorCores):

Canonical link: https://commits.webkit.org/150628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168353 268f45cc-cd09-0410-ab3c-d52691b4dbfc